--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,5 @@
 @import 'tailwindcss';
+
+@utility btn-fuchsia {
+	@apply px-2 py-1 bg-fuchsia-800 active:scale-95 text-white transition-transform
+}
