--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,67 @@
 @utility btn-fuchsia {
 	@apply px-2 py-1 bg-fuchsia-800 active:scale-95 text-white transition-transform
 }
+
+@layer base {
+
+	*,
+	:after,
+	:before {
+		box-sizing: border-box;
+		text-rendering: optimizeLegibility;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+	}
+}
+
+dialog {
+	animation: fade-out 0.7s ease-out;
+}
+
+dialog[open] {
+	animation: fade-in 0.7s ease-out;
+}
+
+dialog[open]::backdrop {
+	animation: backdrop-fade-in 0.7s ease-out forwards;
+}
+
+/* Animation keyframes */
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+		transform: scaleY(0);
+		display: none;
+	}
+
+	100% {
+		opacity: 1;
+		transform: scaleY(1);
+		display: block;
+	}
+}
+
+@keyframes fade-out {
+	0% {
+		opacity: 1;
+		transform: scaleY(1);
+		display: block;
+	}
+
+	100% {
+		opacity: 0;
+		transform: scaleY(0);
+		display: none;
+	}
+}
+
+@keyframes backdrop-fade-in {
+	0% {
+		background-color: rgb(0 0 0 / 0%);
+	}
+
+	100% {
+		background-color: rgb(0 0 0 / 25%);
+	}
+}
